Z-index fix

--- a/content/themes/dude/sass/modules/_cta-left-image.scss
+++ b/content/themes/dude/sass/modules/_cta-left-image.scss
@@ -55,6 +55,8 @@
     background: $color-dude-whitegreyish;
     padding: $padding-general-content-box;
     margin-left: -20rem;
+    position: relative;
+    z-index: 1;
 
     @media (max-width: $container-ipad) {
       padding: 4rem;
